# 0x6A1C012

./: README.md
back-end/server/: .env  Cargo.toml  Rocket.toml  docker-compose.yml  note.txt
back-end/server/.cargo/: config
back-end/server/migrations/2020-11-03-034745_users/: up.sql
back-end/server/migrations/2021-01-16-121437_students/: up.sql
back-end/server/migrations/2021-01-16-121445_teachers/: down.sql  up.sql
back-end/server/migrations/2021-01-16-121449_parents/: down.sql  up.sql
back-end/server/migrations/2021-01-16_attendance/: down.sql  up.sql
back-end/server/migrations/2021-01-16_class/: up.sql
back-end/server/migrations/2021-01-16_homework/: down.sql  up.sql
back-end/server/migrations/2021-01-16_lesson/: down.sql  up.sql
back-end/server/migrations/2021-01-16_mark/: down.sql  up.sql
back-end/server/migrations/2021-01-16_observation/: up.sql
back-end/server/migrations/2021-01-16_subject/: up.sql
back-end/server/migrations/2021-01-22-135625_total/: down.sql  up.sql
back-end/server/prev/2020-11-03-034745_users/: up.sql
back-end/server/prev/2021-01-16-121437_students/: up.sql
back-end/server/prev/2021-01-16-121449_parents/: up.sql
back-end/server/prev/2021-01-16_attendance/: up.sql
back-end/server/prev/2021-01-16_class/: up.sql
back-end/server/prev/2021-01-16_observation/: down.sql  up.sql
back-end/server/prev/2021-01-16_subject/: up.sql
back-end/server/src/: auth_handler.rs  catchers.rs  main.rs  models.rs  mongodb_driver.rs  schedule_handler.rs  schema.rs
back-end/server/src/handlers/: auth.rs  mod.rs  user.rs
back-end/server/src/models/: user.rs
server/: .env  Cargo.toml
server/src/: errors.rs  main.rs  mongodb_driver.rs
server/src/handlers/api/: mod.rs
server/src/handlers/api/auth/: handler.rs  mod.rs  (+1 more)
server/src/models/: class.rs  class_student.rs  lesson.rs  mod.rs  schedule.rs  user.rs
server/static_files/: README.md  diary-friday.html  diary-monday.html  diary-saturday.html  diary-t.html  diary-thursday.html  diary-tuesday.html  diary-wednesday.html  diary.html  index.html  other.html  own-t.html  progress-first.html  progress-fourth.html  progress-second.html  progress-t.html  progress-third.html  progress-year.html  progress.html  timetable-t.html  timetable.html
server/static_files/css/: login.css  main-t.css  main.css  progress.css  style.css  swiper-bundle.min.css  table.css  timetable copy.css  timetable.css
server/static_files/js/: burger.js  login.js  promise.js
server/static_files/partials/: _variables.scss
(+11 files in other folders)
