[package]
name = "server"
version = "0.1.0"
authors = ["RemiIia <valent.xarin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3"
actix-web = "3.1"
actix-rt = "1.1"
argonautica = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
dotenv = "0.15"
futures = "0.3.6"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
pretty_env_logger = "0.4.0" # change to slog
itertools = "0.10.0"
mongodb = "1.2.0"
actix-files = "0.5.0"
async-trait = "0.1.42"

[dev-dependencies]
pretty_assertions = "0.6.1"
