[package]
name = "server"
version = "0.1.0"
authors = ["RemiIia <valent.xarin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dotenv = "0.15"
log = "0.4.14"
slog = "2.7.0"
mongodb = "1.2.0"
# r2d2 = "0.8.9"
# r2d2-mongodb = "0.2.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", features = ["secrets", "tls"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bson = "1.2.0"

# [dev-dependencies]
# criterion = "0.3.4"
#
# [[bench]]
# name = "speed_test"
# harness = false


# argonautica = "0.2.0"
# chrono = { version = "0.4", features = ["serde"] }
# derive_more = "0.99"
# futures = "0.3.6"
# lazy_static = "1.4"
# pretty_env_logger = "0.4.0"
# itertools = "0.10.0"
